fixed bad references after renaming packages