@@ -67,7 +67,7 @@ public final class ErlideUtil {
     public static boolean isNoModelCache() {
         if (fgCacheNoModelCache == null) {
             final String test = System.getProperty("erlide.noModelCache");
-            fgCacheNoModelCache = new Boolean("true".equals(test));
+            fgCacheNoModelCache = Boolean.valueOf("true".equals(test));
         }
         return fgCacheNoModelCache.booleanValue();
     }
